--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,23 @@
 {
-	"singleQuote": true,
-	"bracketSpacing": false,
-	"useTabs": true,
+	"arrowParens": "always",
+	"bracketSameLine": false,
+	"bracketSpacing": true,
+	"semi": true,
+	"experimentalTernaries": false,
+	"singleQuote": false,
+	"jsxSingleQuote": false,
+	"quoteProps": "as-needed",
+	"trailingComma": "all",
+	"singleAttributePerLine": false,
+	"htmlWhitespaceSensitivity": "css",
+	"vueIndentScriptAndStyle": false,
+	"proseWrap": "preserve",
+	"insertPragma": false,
+	"printWidth": 80,
+	"requirePragma": false,
+	"tabWidth": 2,
+	"useTabs": false,
+	"embeddedLanguageFormatting": "auto",
 	"overrides": [
 		{
 			"files": ["*.yml"],
