--- a/package.json
+++ b/package.json
@@ -1,42 +1,49 @@
 {
-  "name": "remotion-tailwindcss",
-  "version": "1.0.0",
-  "description": "My Remotion video",
-  "sideEffects": [
-    "*.css"
-  ],
-  "repository": {},
-  "license": "UNLICENSED",
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "webpack"
-      ]
-    }
-  },
-  "dependencies": {
-    "@remotion/bundler": "4.0.193",
-    "@remotion/cli": "4.0.193",
-    "@remotion/zod-types": "4.0.193",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "remotion": "4.0.193",
-    "zod": "3.22.3"
-  },
-  "devDependencies": {
-    "@remotion/eslint-config": "4.0.193",
-    "@types/react": "^18.0.26",
-    "@types/web": "^0.0.143",
-    "eslint": "^8.43.0",
-    "prettier": "^3.2.5",
-    "@remotion/tailwind": "4.0.193",
-    "typescript": "5.4.5"
-  },
-  "scripts": {
-    "start": "remotion studio",
-    "build": "remotion render MyComp out/video.mp4",
-    "upgrade": "remotion upgrade",
-    "test": "eslint src --ext ts,tsx,js,jsx && tsc"
-  },
-  "packageManager": "npm@10.1.0"
+	"name": "remotion-tailwindcss",
+	"version": "1.0.0",
+	"description": "My Remotion video",
+	"sideEffects": [
+		"*.css"
+	],
+	"repository": {},
+	"license": "UNLICENSED",
+	"pnpm": {
+		"peerDependencyRules": {
+			"ignoreMissing": [
+				"webpack"
+			]
+		}
+	},
+	"dependencies": {
+		"@mdx-js/loader": "3.0.1",
+		"@mdx-js/react": "3.0.1",
+		"@remotion/bundler": "4.0.193",
+		"@remotion/cli": "4.0.193",
+		"@remotion/google-fonts": "^4.0.193",
+		"@remotion/zod-types": "4.0.193",
+		"clsx": "^2.1.1",
+		"codehike": "^1.0.0-beta.0",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-icons": "^5.2.1",
+		"remotion": "4.0.193",
+		"tailwind-merge": "^2.4.0",
+		"zod": "3.22.3"
+	},
+	"devDependencies": {
+		"@remotion/eslint-config": "4.0.193",
+		"@remotion/tailwind": "4.0.193",
+		"@types/react": "^18.0.26",
+		"@types/web": "^0.0.143",
+		"eslint": "^8.43.0",
+		"prettier": "^3.2.5",
+		"typescript": "5.4.5"
+	},
+	"scripts": {
+		"start": "remotion studio",
+		"build": "remotion render MyComp out/video.mp4",
+		"upgrade": "remotion upgrade",
+		"test": "eslint src --ext ts,tsx,js,jsx && tsc"
+	},
+	"packageManager": "npm@10.1.0"
 }
